<resources>
    <string name="app_name">Tresure</string>
    <string name="title_home">Home</string>
    <string name="title_plan">Plan</string>
    <string name="title_profile">Profile</string>
    <string name="banner">Banner</string>
    <string name="judul_rencana">Judul Rencana</string>
    <string name="jumlah_orang">Jumlah Orang</string>
    <string name="kota">Kota</string>
    <string name="lokasi_awal">Lokasi Awal</string>
    <string name="waktu_mulai">Waktu Mulai</string>
    <string name="anggaran">Anggaran</string>
    <string name="simpan">Simpan</string>
    <string name="sisa_anggaran">Sisa Anggaran :</string>
    <string name="edit_rencana">Edit Rencana</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="lihat_plan_orang_lain">Lihat plan orang lain yuk!</string>
    <string name="lagi_viral">Lagi viral</string>
    <string name="mau_cari_makan_dulu">Mau cari makan dulu?</string>
    <string name="liburan_bareng_keluarga">Liburan bareng keluarga</string>
    <string name="create_a_new_plan">Create a new plan</string>
    <string name="place_image">Place Image</string>
    <string name="nama">Nama</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="rp100_000">100.000</string>
    <string name="orang">/orang</string>
    <string name="plan_image">Plan Image</string>
    <string name="_20_00">20.00</string>
    <string name="mobil">Mobil</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="rencanaku">Rencanaku</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="bantuan">Bantuan</string>
    <string name="tentang">Tentang</string>
    <string name="keluar">Keluar</string>
    <string name="berhasil">Berhasil</string>
    <string name="pengguna_berhasil_dibuat">Pengguna berhasil dibuat!</string>
    <string name="tidak_boleh_kosong">Tidak boleh kosong</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="minimal_8_karakter">Minimal 8 karakter</string>
    <string name="password_tidak_cocok">Password tidak cocok</string>
    <string name="username_atau_password_salah">Nama pengguna atau kata sandi salah</string>
    <string name="login_gagal">Login gagal</string>
    <string name="email_atau_username_sudah_digunakan">Email atau nama pengguna sudah digunakan</string>
    <string name="ada_yang_salah_coba_lagi_nanti">Ada yang salah, coba lagi nanti</string>
    <string name="kategori">Kategori</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sodales massa sit amet velit ornare, ac cursus eros blandit. Suspendisse erat metus, tristique vel dui suscipit, sagittis gravida urna. Curabitur venenatis, sem a malesuada facilisis, lorem nibh lacinia nulla, ut blandit massa purus sed felis. Quisque ac congue elit. Nullam porttitor tristique erat, id ultrices arcu vestibulum non. Aliquam dictum mi nec blandit fermentum. Ut non eros massa. Donec vulputate metus tortor, sit amet tincidunt justo porttitor non. In hac habitasse platea dictumst. Ut vitae feugiat neque, eu maximus quam. Fusce mattis volutpat fermentum. Etiam placerat id lorem ut iaculis.</string>
    <string name="gagal_mengambil_data">Gagal mengambil data</string>
    <string name="rp">IDR</string>
    <string name="suka_dengan_seni_dan_budaya">Suka dengan seni dan budaya?</string>
    <string name="bahari">Bahari</string>
    <string name="budaya">Budaya</string>
    <string name="cagar_alam">Cagar Alam</string>
    <string name="pusat_perbelanjaan">Pusat Perbelanjaan</string>
    <string name="taman_hiburan">Taman Hiburan</string>
    <string name="tempat_ibadah">Tempat Ibadah</string>
    <string name="lainnya">Lainnya</string>
    <string name="rencana_berhasil_dibuat">Rencana Berhasil Dibuat</string>
    <string name="rencana_gagal_dibuat">Rencana Gagal Dibuat</string>
    <string name="jakarta">Jakarta</string>
    <string name="surabaya">Surabaya</string>
    <string name="bandung">Bandung</string>
    <string name="semarang">Semarang</string>
    <string name="yogyakarta">Yogyakarta</string>
    <string name="yakin_ingin_keluar">Yakin ingin keluar?</string>
    <string name="tidak">Tidak</string>
    <string name="tanggal_liburan">Tanggal Liburan</string>
    <string name="_4_2">4.2</string>
    <string name="selamat_datang_di_tresure">Selamat Datang di Tresure!</string>
    <string name="tambah_tempat">Tambah Tempat</string>
    <string name="rp240_000">Rp240.000</string>
</resources>