<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".ui.landingpage.LandingPageActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_no_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="48dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/selamat_datang_di_tresure"
        android:textColor="@color/mainTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_border_yellow"
        android:elevation="0dp"
        android:text="@string/masuk"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp"
        android:translationZ="0dp"
        app:circularflow_radiusInDP="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/button_border_white"
        android:text="@string/daftar"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp"
        app:circularflow_radiusInDP="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>