<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/divider_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp" >

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/nama_pengguna"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true" >

            <TextView
                android:id="@+id/tvMyPlan"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/rencanaku"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_forward_24" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true" >

            <TextView
                android:id="@+id/tvChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/ubah_kata_sandi"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_forward_24" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true" >

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/bantuan"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_forward_24" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true" >

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/tentang"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_forward_24" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:clickable="true"
            android:focusable="true" >

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/keluar"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_horizontal" />

    </LinearLayout>

</ScrollView>